--- a/the_game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/the_game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -99,6 +99,8 @@ LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 CleanShutdown=False
 OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter_2.2DSideScrollerCharacter_2
 OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/player1.player1
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap.2DSideScrollerExampleMap:PersistentLevel.2DSideScrollerExampleMap
 
 [RootWindow]
 ScreenPosition=X=1080.000 Y=360.000
@@ -1233,6 +1235,15 @@ REINST_2DSideScrollerCharacter_2_C_43.Rendering=True
 REINST_2DSideScrollerCharacter_2_C_43.Replication=True
 REINST_2DSideScrollerCharacter_2_C_43.Input=True
 REINST_2DSideScrollerCharacter_2_C_43.Actor=True
+TextRenderActor.TransformCommon=True
+TextRenderActor.Materials=True
+TextRenderActor.Text=True
+TextRenderActor.Rendering=True
+TextRenderActor.Lighting=True
+TextRenderActor.Tags=True
+TextRenderActor.Cooking=True
+TextRenderActor.Input=True
+Actor.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter=1
