fixed both jumps

--- a/the_game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/the_game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -99,8 +99,8 @@ LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 CleanShutdown=False
 OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter_2.2DSideScrollerCharacter_2
 OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/player2.player2
 OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/player1.player1
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap.2DSideScrollerExampleMap:PersistentLevel.2DSideScrollerExampleMap
 
 [RootWindow]
 ScreenPosition=X=1080.000 Y=360.000
@@ -1244,6 +1244,33 @@ TextRenderActor.Tags=True
 TextRenderActor.Cooking=True
 TextRenderActor.Input=True
 Actor.Actor=True
+K2Node_InputTouch.Input=True
+REINST_2DSideScrollerCharacter_C_157.Variable=True
+REINST_2DSideScrollerCharacter_C_157.TransformCommon=True
+REINST_2DSideScrollerCharacter_C_157.Sockets=True
+REINST_2DSideScrollerCharacter_C_157.Shape=True
+REINST_2DSideScrollerCharacter_C_157.Navigation=True
+REINST_2DSideScrollerCharacter_C_157.Rendering=True
+REINST_2DSideScrollerCharacter_C_157.Physics=True
+REINST_2DSideScrollerCharacter_C_157.Collision=True
+REINST_2DSideScrollerCharacter_C_157.Tags=True
+REINST_2DSideScrollerCharacter_C_157.ComponentReplication=True
+REINST_2DSideScrollerCharacter_C_157.Cooking=True
+REINST_2DSideScrollerCharacter_C_157.Events=True
+REINST_2DSideScrollerCharacter_C_167.Variable=True
+REINST_2DSideScrollerCharacter_C_167.TransformCommon=True
+REINST_2DSideScrollerCharacter_C_167.Sprite=True
+REINST_2DSideScrollerCharacter_C_167.Sockets=True
+REINST_2DSideScrollerCharacter_C_167.Materials=True
+REINST_2DSideScrollerCharacter_C_167.Physics=True
+REINST_2DSideScrollerCharacter_C_167.Collision=True
+REINST_2DSideScrollerCharacter_C_167.Lighting=True
+REINST_2DSideScrollerCharacter_C_167.Rendering=True
+REINST_2DSideScrollerCharacter_C_167.Tags=True
+REINST_2DSideScrollerCharacter_C_167.ComponentReplication=True
+REINST_2DSideScrollerCharacter_C_167.Activation=True
+REINST_2DSideScrollerCharacter_C_167.Cooking=True
+REINST_2DSideScrollerCharacter_C_167.Events=True
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter=1
@@ -1284,6 +1311,7 @@ Actor.Actor=True
 /Game/NinjaSpritsAssets/png-pink/Idle__000.Idle__000=1
 /Game/NinjaSpritsAssets/png-pink/Glide_009_Sprite.Glide_009_Sprite=1
 /Game/NinjaSpritsAssets/png-pink/sprits/Attack__001.Attack__001=1
+/Game/enum/player1enum.player1enum=1
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
