--- a/the_game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/the_game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -100,9 +100,10 @@ LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter
 
 [RootWindow]
-ScreenPosition=X=-417.000 Y=562.000
+ScreenPosition=X=466.000 Y=142.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=False
 
