--- a/the_game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/the_game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -91,7 +91,7 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.130000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/NinjaSpritsAssets/png-purple
+ContentBrowserTab1.SelectedPaths=/Game/2DSideScrollerBP/Blueprints
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
@@ -104,7 +104,7 @@ CleanShutdown=True
 [RootWindow]
 ScreenPosition=X=466.000 Y=142.000
 WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1820,6 +1820,37 @@ ArrowComponent.Tags=True
 ArrowComponent.ComponentReplication=True
 ArrowComponent.Cooking=True
 ArrowComponent.Events=True
+TextBlock.Layout=False
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Performance=False
+TextBlock.Wrapping=False
+TextBlock.Behavior=False
+TextBlock.Render Transform=False
+TextBlock.Clipping=False
+TextBlock.Navigation=False
+main-ui_C.Appearance=True
+main-ui_C.Designer=True
+main-ui_C.Input=True
+main-ui_C.Interaction=True
+main-ui_C.Layout=True
+main-ui_C.Behavior=True
+main-ui_C.Render Transform=True
+main-ui_C.Performance=True
+main-ui_C.Clipping=True
+main-ui_C.Navigation=True
+StrProperty.Variable=True
+StrProperty.DefaultValueCategory=True
+REINST_2DSideScrollerCharacter_C_71.None=True
+REINST_2DSideScrollerCharacter_C_71.Tick=True
+REINST_2DSideScrollerCharacter_C_71.Character=True
+REINST_2DSideScrollerCharacter_C_71.Camera=True
+REINST_2DSideScrollerCharacter_C_71.Pawn=True
+REINST_2DSideScrollerCharacter_C_71.Rendering=True
+REINST_2DSideScrollerCharacter_C_71.Replication=True
+REINST_2DSideScrollerCharacter_C_71.Input=True
+REINST_2DSideScrollerCharacter_C_71.Actor=True
+main-ui_C.Default=True
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter=1
@@ -1968,7 +1999,7 @@ UdpMessagingSettings=InputSettings.Bindings.ActionMappings.player 2 jump,InputSe
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.player 2 jump,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.player 1 shoot,InputSettings.Bindings.ActionMappings.player 1 star,
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
 2DSideScrollerCharacter_C=2DSideScrollerCharacter_C.Rendering.TextureStreaming,2DSideScrollerCharacter_C.Rendering.LOD,
-FloatProperty=
+FloatProperty=2DSideScrollerCharacter_C.Rendering.TextureStreaming,2DSideScrollerCharacter_C.Rendering.LOD,
 K2Node_VariableGet=2DSideScrollerCharacter_C.Rendering.TextureStreaming,2DSideScrollerCharacter_C.Rendering.LOD,
 ByteProperty=2DSideScrollerCharacter_C.Rendering.TextureStreaming,2DSideScrollerCharacter_C.Rendering.LOD,
 K2Node_VariableSet=2DSideScrollerCharacter_C.Rendering.TextureStreaming,2DSideScrollerCharacter_C.Rendering.LOD,
@@ -2037,15 +2068,19 @@ REINST_2DSideScrollerCharacter_C_681="\"Object.Character.Sprite.Object.Sprite.Sp
 REINST_2DSideScrollerCharacter_2_C_701="\"Object.Character.Sprite.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PaperFlipbook="\"Object.Sprite.KeyFrames\" "
 MaterialEditorInstanceConstant="\"Object.ParameterGroups.ParameterGroups[2].Parameters.Parameters[0].Object.ParameterValue\" "
+TextBlock="\"Object.Appearance.Font\" "
+TextLayoutWidget="\"Object.Appearance.Font\" "
+Widget=
+Visual=
 
 [WidgetTemplatesExpanded]
-Extra=False
-Input=False
-Optimization=False
-Panel=False
-Primitive=False
+Extra=True
+Input=True
+Optimization=True
+Panel=True
+Primitive=True
 Special Effects=False
-Uncategorized=False
+Uncategorized=True
 
 [MaterialInstanceEditor]
 bShowGrid=False
