--- a/the_game/Config/DefaultInput.ini
+++ b/the_game/Config/DefaultInput.ini
@@ -47,6 +47,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 +AxisMappings=(AxisName="PLAYER2",Key=Left,Scale=-1.000000)
 +AxisMappings=(AxisName="PLAYER2",Key=Right,Scale=1.000000)
 +AxisMappings=(AxisName="player 1 climb",Key=W,Scale=1.000000)
++AxisMappings=(AxisName="player 1 climb",Key=S,Scale=-1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/LeftVirtualJoystickOnly.LeftVirtualJoystickOnly
